# pando-rs

./: .dockerignore  Cargo.toml  Dockerfile  README.md  build.rs  hacking-schedule.yaml  justfile
.flox/: env.json
.flox/env/: manifest.toml
.github/workflows/: containers.yaml
agent/: Cargo.toml
agent/src/: main.rs
cli/: Cargo.toml
cli/src/: main.rs
core/: Cargo.toml  build.rs
core/protos/remote/upd88/com/: device.proto  remote.proto  types.proto
core/src/: config.rs  config_json.rs  config_txt.rs  daemon.rs  lib.rs  mqtt.rs  nats.rs  registration.rs  schedule.rs  temp.rs
entity/: Cargo.toml
entity/src/: device.rs  device_schedule.rs  fleet.rs  lib.rs  organization.rs  person.rs  person_auth_google.rs  person_organization.rs  schedule.rs  waiting_room.rs
migration/src/: lib.rs  m20250329_235956_initial.rs
protos/remote/upd88/com/: remote.proto
remote/: Cargo.toml
remote/src/: main.rs
src/: config.rs  config_txt.rs  main.rs
