[package]
name = "pando-rs"
version = "0.1.0"
edition = "2021"
rust-version = "1.71.1"

[dependencies]
prost = "0.13.4"
tonic = { version = "0.12.3", features = ["tls-webpki-roots", "gzip", "zstd"] }
tokio = { version = "1.29.1", features = ["fs", "net", "rt", "macros", "rt-multi-thread", "signal"] }
rustix = { version = "0.38.44", features = ["system", "fs", "mount", "net"] }
bollard = "0.18.1"
futures = "0.3.31"
serde = { version = "1.0.217", features = ["derive"] }
serde_json = "1.0.138"
winnow = "0.7.2"

[build-dependencies]
tonic-build = { version = "0.12.3", features = ["prost"] }

# If installing a compaible protobuf compiler becomes too onerous, this nifty packagel will build it for us at the
# non-zero cost of...compiling protoc. May be useful if we want to build this within yocto, though on last attempt
# on a Fedora-based build host, the protoc compiler produced could not execute. However, the Yocto-provided protoc
# would not execute either, so I suspect an incompatiblity with my test.
# protobuf-src = "2.1.1"
