[workspace]
members = [
    "core",
    "cli",
    "agent",
]
resolver = "2"

[workspace.package]
version = "0.1.0"
edition = "2021"
rust-version = "1.71.1"


[workspace.dependencies]
tokio = { version = "1.44.1", features = ["fs", "net", "rt", "macros", "rt-multi-thread", "signal", "process"] }
env_logger = "0.11.7"
anyhow = "1.0.44"
