[workspace]
members = ["core", "cli", "agent", "remote", "migration", "entity"]
resolver = "2"

[workspace.package]
version = "0.1.0"
edition = "2021"
rust-version = "1.71.1"


[workspace.dependencies]
tokio = { version = "1.44.2", features = [
    "fs",
    "net",
    "rt",
    "macros",
    "rt-multi-thread",
    "signal",
    "process",
] }
tonic = { version = "0.13.0", features = ["tls-webpki-roots", "gzip", "zstd"] }
rustix = { version = "1.0.5", features = ["system"] }
env_logger = "0.11.8"
anyhow = "1.0.44"
sea-orm = { version = "1.1.8", features = [
    "sqlx-postgres",
    "sqlx",
    "runtime-tokio",
] }
uuid = { version = "1.16.0", features = ["v4", "v7"] }
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.140"