[package]
name = "pandocli"
version.workspace = true
edition.workspace = true
rust-version.workspace = true

[dependencies]
pando-core = { path = "../core" }
clap = { version = "4.4.18", features = ["derive"] }
tokio = { workspace = true }
anyhow = { workspace = true }
env_logger = { workspace = true }

[[bin]]
name = "pandocli"
path = "src/main.rs"